[package]
name = "naijaup"
version = "0.11.5"
edition = "2024"
rust-version = "1.90.0"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
description = "Toolchain manager for The NaijaScript Interpreter"
repository = "https://github.com/xosnrdev/naijascript"
license = "MIT"
readme = false
publish = false

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clap-cargo = { version = "0.17.1", features = ["clap"] }
dirs = "6.0.0"
regex-lite = "0.1.6"
tar = "0.4.44"
xz2 = "0.1.7"
zip = "5.1.1"

[target.'cfg(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu"))'.dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["blocking", "rustls-tls"]

[target.'cfg(not(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu")))'.dependencies.reqwest]
version = "0.12.23"
features = ["blocking"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.1", features = [
	"Win32_System_Registry",
	"Win32_Storage_FileSystem",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }

# We use `opt-level = "s"` as it significantly reduces binary size.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times
